--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,21 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //Room-Datenbank
+
+    //Room-Database
     def room_version = "2.2.2"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //Lifecycle components
+    def lifcycle_version = "2.1.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifcycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifcycle_version"
 
 }
